--- a/public/tempLogin.html
+++ b/public/tempLogin.html
@@ -5,7 +5,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title><%= title %></title>
-  <script src="stylesheets/style.css"> </script>
 </head>
 <body>
 <div class="container text-center justify-content-center">
@@ -17,14 +16,16 @@
     <div class="col-12">
       <p>Please sign in</p>
     </div>
-    <form class="col-6 offset-3">
+    <form class="col-6 offset-3" id="login-form" action="">
       <div class="row">
         <input id="sign-in-email" type="email" placeholder="Enter Email" class="form-control col-12">
         <input id="sign-in-password" type="password" placeholder="Enter Password" class="form-control col-12 mt-2d">
         <input type="submit" value="Sign In" class="btn btn-primary col-4 offset-4 mt-2">
       </div>
     </form>
-    <button class="col-4 offset-4 mt-5"> Register</button>
+    <p class="col-4 offset-4 mt-5">
+      Click here to <a href="tempRegister.html">register</a>
+    </p>
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
