password page + removed offset - still html

--- a/public/tempRegister.html
+++ b/public/tempRegister.html
@@ -8,25 +8,25 @@
 </head>
 <body>
 
-<div class="container text-center justify-content-center">
-  <div class="row">
+<div class="container">
+  <div class="row text-center justify-content-center">
     <h1 class="col-12"><%= title %></h1>
-    <img src="./images/NASA-Logo-Large.png" alt="" class="image-fluid col-2 offset-5">
+    <img src="./images/NASA-Logo-Large.png" alt="" class="image-fluid col-2">
   </div>
-  <div class="row">
+  <div class="row text-center justify-content-center">
     <div class="col-12">
       <p>Please Register</p>
     </div>
-    <form class="col-6 offset-3" id="register-form" action="">
-      <div class="row">
+    <form class="col-6" id="register-form" action="tempPassword.html">
+      <div class="row text-center justify-content-center">
         <input id="register-email" type="email" placeholder="Enter Email" class="form-control col-12">
-        <input id="register-first-name" type="text" placeholder="Enter First Name" class="form-control col-12 mt-2d">
-        <input id="register-last-name" type="text" placeholder="Enter Last Name" class="form-control col-12 mt-2d">
-        <input type="submit" value="Next" class="btn btn-primary col-4 offset-4 mt-2">
+        <input id="register-first-name" type="text" placeholder="Enter First Name" class="form-control col-12 mt-2">
+        <input id="register-last-name" type="text" placeholder="Enter Last Name" class="form-control col-12 mt-2">
+        <input type="submit" value="Next" class="btn btn-primary col-4 mt-2">
       </div>
     </form>
 
-    <p class="col-4 offset-4 mt-5" >
+    <p class="col-12 mt-5" >
       Already registered? go to <a href="tempLogin.html"> login</a> page
     </p>
 
