--- a/public/tempPassword.html
+++ b/public/tempPassword.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <title><%= title %></title>
+  <title>Choose Password Page</title>
 </head>
 <body>
+
 <div class="container">
   <div class="row text-center justify-content-center">
     <h1 class="col-12"><%= title %></h1>
-    <img src="./images/NASA-Logo-Large.png" alt="" class="image-fluid col-4">
+    <img src="./images/NASA-Logo-Large.png" alt="" class="image-fluid col-2">
   </div>
   <div class="row text-center justify-content-center">
     <div class="col-12">
-      <p>Please sign in</p>
+      <p>Please choose a password</p>
     </div>
-    <form class="col-6" id="login-form" action="">
+    <form class="col-6 " id="register-form" action="">
       <div class="row text-center justify-content-center">
-        <input id="sign-in-email" type="email" placeholder="Enter Email" class="form-control col-12">
-        <input id="sign-in-password" type="password" placeholder="Enter Password" class="form-control col-12 mt-2d">
-        <input type="submit" value="Sign In" class="btn btn-primary col-4 mt-2">
+        <input id="register-password" type="password" placeholder="Enter Password" class="form-control col-12">
+        <input id="register-confirm-password" type="password" placeholder="Enter Confirmed Password" class="form-control col-12 mt-2d">
+        <a id="register-back-button" class="btn btn-light col-2 mt-2" href="tempRegister.html">Back</a>
+        <input type="submit" value="Register" class="btn btn-primary col-2 mt-2">
       </div>
     </form>
-    <p class="col-12 mt-5">
-      Click here to <a href="tempRegister.html">register</a>
+
+    <p class="col-12 mt-5" >
+      Already registered? go to <a href="tempLogin.html"> login</a> page
     </p>
+
   </div>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
