Views are working but there are bags

--- a/public/tempRegister.html
+++ b/public/tempRegister.html
@@ -19,9 +19,9 @@
     </div>
     <form class="col-6" id="register-form" action="tempPassword.html">
       <div class="row text-center justify-content-center">
-        <input id="register-email" type="email" placeholder="Enter Email" class="form-control col-12">
-        <input id="register-first-name" type="text" placeholder="Enter First Name" class="form-control col-12 mt-2">
-        <input id="register-last-name" type="text" placeholder="Enter Last Name" class="form-control col-12 mt-2">
+        <input name= "emailAdd" id="register-email" type="email" placeholder="Enter Email" class="form-control col-12">
+        <input name= "fName" id="register-first-name" type="text" placeholder="Enter First Name" class="form-control col-12 mt-2">
+        <input name= "lName" id="register-last-name" type="text" placeholder="Enter Last Name" class="form-control col-12 mt-2">
         <input type="submit" value="Next" class="btn btn-primary col-4 mt-2">
       </div>
     </form>
